create crud endpoints and paginate api
